--- a/pages/Components/NavBar/NavBar.css
+++ b/pages/Components/NavBar/NavBar.css
@@ -10,23 +10,22 @@
     background-color: white;
     position: fixed;
     top:0;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    grid-template-rows: 100px;
     box-shadow: 0px 0px 20px var(--color2Blur);
     z-index: 100;
-    justify-content: space-between;
 }
 
 .logo{
-    width: 5vw;
     height: 100px;
     position: relative;
-    left: 5vw;
+    left: 2vw;
 }
 
 .headers{
     display: flex;
-    width: 40vw;
+    /* width: 40vw; */
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
